# CRISP-Med

./: .gitignore  LICENSE  README.md  pyproject.toml
docs/: architecture.md
examples/: basic_usage.py  face_arcface_usage.py  medical_ctscan_usage.py  medical_xray_usage.py
src/crisp/: __init__.py  classifier.py  cli.py  datasets.py  memory.py  prototypes.py  trainer.py  utils.py  voting.py
src/crisp/encoders/: __init__.py  arcface.py  base.py  clip_encoder.py  factory.py  medical.py  resnet.py
src/crisp/retrievers/: __init__.py  annoy_backend.py  base.py  factory.py  faiss_backend.py  numpy_backend.py
tests/: test_factory.py  test_memory.py  test_retriever_numpy.py  test_voting.py
